corrected spacing

--- a/public/global.css
+++ b/public/global.css
@@ -352,7 +352,7 @@ svelte-scroller-background-container {
 } 
 
 .border-pad-subtitle {
-	top: 75%;
+	top: 76%;
 	right: 4.5%;
 	position: absolute;
 	background-color:#0055CC;
